internal/xds/translator/testdata/out/xds-ir-sublinear/accesslog-types.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        prefix: /
      name: direct-route
      route:
        cluster: direct-route-dest
        upgradeConfigs:
        - upgradeType: websocket
